# DeliveryApp

./: CMakeLists.txt  DeliveryApp - Shortcut.lnk  DeliveryApp.c  Menu.py  contact_manager.py
